[package]
name = "efficacy"
version = "0.3.0"
authors = ["Peter French peter.fwrench@gmail.com"]
license = "MIT OR Apache-2.0"
description = "A todo list command line implementation"
keywords = ["cli", "todo"]
categories = ["command-line-utilities"]
edition = "2018"
repository = "https://github.com/PFwrench/Efficacy"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = {version = "0.4", features = ["serde"]}
clap = {version = "~2.27.0", features = ["yaml"]}
colored = "1.9.2"
config = "^0.10.0"
dirs = "2.0"
itertools = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"